CostalCloud/force-app/main/default/objects/Soffit__c.object
<CustomObject>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>disco__Form__c</referenceTo>
        <relationshipLabel>Soffits</relationshipLabel>
        <relationshipName>Soffits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>H_Off_Floor_Fraction__c</fullName>
        <label>H Off Floor Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fraction_values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>H_Off_Floor__c</fullName>
        <label>H Off Floor</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_L_or_R__c</fullName>
        <label>Length L or R?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Soff_Length_Fraction__c</fullName>
        <label>Soff Length Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fraction_values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Soffit_Depth_Fraction__c</fullName>
        <label>Soffit Depth Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fraction_values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Soffit_Depth__c</fullName>
        <label>Soffit Depth</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Soffit_Height_Fraction__c</fullName>
        <label>Soffit Height Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fraction_values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Soffit_Height__c</fullName>
        <label>Soffit Height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Soffit_Length__c</fullName>
        <label>Soffit Length</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Soffit_Measurement_Photo__c</fullName>
        <label>Soffit Measurement Photo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Soffit_Notes__c</fullName>
        <label>Soffit Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Soffit_Photo__c</fullName>
        <label>Soffit Photo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Soffit_Status__c</fullName>
        <label>Soffit Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Soffits are Staying</fullName>
                </value>
                <value>
                    <fullName>Customer is Removing</fullName>
                </value>
                <value>
                    <fullName>Installer is Removing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wall__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wall</label>
        <referenceTo>Walls__c</referenceTo>
        <relationshipLabel>Soffits</relationshipLabel>
        <relationshipName>Soffits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Soffit</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Soffit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Soffits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>